--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'java'
     id 'io.freefair.lombok' version '5.3.0'
 }
+sourceCompatibility = 11
+
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 group 'ru.netology'
 version '1.0-SNAPSHOT'
